--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -36,6 +36,15 @@ defaults
 	errorfile 503 /etc/haproxy/errors/503.http
 	errorfile 504 /etc/haproxy/errors/504.http
 
+listen stats
+	bind *:1936
+	mode http
+	stats enable
+	stats hide-version
+	stats realm Haproxy\ Statistics
+	stats uri /
+	stats auth Username:Password
+
 program api
 	command dataplaneapi -f /etc/haproxy/dataplaneapi.hcl --reload-cmd "kill -SIGUSR2 1"
 	no option start-on-reload
